--- a/src/styles/popup.css
+++ b/src/styles/popup.css
@@ -87,4 +87,6 @@
     .grid-container {
         grid-template-columns: repeat(1,1fr); /* Two columns */
     }
+    .cata-p{
+        font-size: 1 rem;
 }
